# SQLPilot

./: .env.example  README.md  pyproject.toml
src/: connection.py  main.py
